# gitsanity

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_recommendations_index.py
backend/app/: config.py  dependencies.py  limiter.py  main.py  security.py
backend/app/models/: __init__.py  recommendation.py  repository.py  user.py
backend/app/routers/: auth.py  feed.py  saved.py
backend/app/schemas/: recommendation.py
backend/app/services/: auth.py  github.py  ingestion.py  preference.py  recommender.py
backend/tests/: conftest.py  test_auth_router.py  test_feed_router.py  test_preference.py  test_recommender.py  test_saved_router.py
docs/: architecture.md  prd.md  tasks.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: RepoCard.test.tsx  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/feed/: page.tsx
frontend/app/saved/: page.tsx
frontend/components/: NavBar.tsx  QueryProvider.tsx  RepoCard.tsx  RepoCardSkeleton.tsx  Toast.tsx
frontend/lib/: api.ts  auth.ts  useToast.ts  utils.ts
frontend/types/: index.ts
